@@ -14,6 +14,8 @@ Changelog Version 0.1.3:
         - CMD_SUC_PTTOP_HEADER -> Defines the Header of the /Playtimetop Command
         - CMD_SUC_PTTOP_ENTRY -> Defines each Data-Entry of the /Playtimetop Command
 
+        - EXT_PAPI_TIME_FORMAT -> Defines the Time Format for the PlaceholderAPI's placeholders from this Plugin.
+
         - GUI_EDIT_REWARD_WINDOWNAME -> The Windowname of the Edit-Reward GUI
         - GUI_EDIT_REWARD_EXIT_NOSAVE_NAME -> The Name of the Exit-without-Saving-Reward-GUI Item
         - GUI_EDIT_REWARD_EXIT_NOSAVE_LORE -> The Lore of the Exit-without-Saving-Reward-GUI Item
@@ -34,6 +36,12 @@ Changelog Version 0.1.3:
     - Config Values:
         - Value "AllowAutoUpdate" (boolean) allows to Automatically download the newest Plugin Version and install at the next server restart
             -> Made it hidden. Users who explicitly want to use it, may still enable it.
+
+    - PlaceholderAPI Support:
+        - Added the following Placeholders:
+            - %ptr_playtime% -> Returns the Playtime for the Player, the message format is defined as 'EXT_PAPI_TIME_FORMAT'
+            - %ptr_sessiontime% -> Returns the Sessiontime for the Player, the message format is defined as 'EXT_PAPI_TIME_FORMAT'
+        - All custom Lang Messages can now use PlaceholderAPI's Placeholders.
 
 
 
